# Demo

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindRadixWindow.cmake
include/: Player.hpp  Scene.hpp
source/: CMakeLists.txt  Graphics.cpp  Main.cpp  Math.cpp  Player.cpp  Scene.cpp
tests/: CMakeLists.txt  PlayerTest.cpp
